--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@200&display=swap');
 
+/* global */
+
 * {
     margin: 0;
     padding: 0;
@@ -20,6 +22,10 @@ body {
     height: 100%;
     margin: 0 auto;
 }
+
+/* global */
+/* section 1 top-bar */
+
 .top-bar {
     width: 100%;
     height: 45px;
@@ -49,364 +55,74 @@ body {
     margin-left: 35px;
 }
 
-.header{
-    display: block;
+/* section 1 top-bar */
+/*section 2 header-menu*/
+
+.menu {
+    display: flex;
     width: 100%;
     height: 100px;
     position: sticky;
     top: 0;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-    z-index: 10;
+    z-index: 99;
     background: white;
+    justify-content: center;
 }
-.v-center {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-.container {
-    width: 100%;
+.menu .wrapper {
+    width: 1200px;
     height: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
 }
-.header .item-left{
-    flex:0 0 17%;
-}
-.logo a {
+.menu__logo a{
     font-family: 'Hubballi', cursive;
     border: 1px solid black;
     font-size: 40px;
     padding: 2px 5px;
 }
-.header .item-center{
-    justify-self: flex-end;
-}
-.header .item-right{
-    flex:0 0 17%;
+.menu__links {
     display: flex;
-    justify-content: flex-end;
 }
-.header .item-right a{
+.menu__links a{
     margin-left: 45px;
     font-size: 25px;
     font-family: 'Saira Condensed', sans-serif;
+    text-transform: uppercase;
 }
-.header .menu > ul > li{
-    display: inline-block;
-    line-height: 50px;
-    margin-left: 25px;
+.menu__links a:hover{
+    color:#ea4636;
 }
-.header .menu > ul > li > a{
-    margin-left: 45px;
-    font-size: 25px;
-    font-family: 'Saira Condensed', sans-serif;
-}
-.header .menu > ul > li .sub-menu{
+.menu__links__dropdown__menu {
+    width: 150px;
     position: absolute;
-    z-index: 500;
-    background-color:#ffffff;
-    box-shadow: -2px 2px 70px -25px rgba(0,0,0,0.3);
-    padding: 20px 30px;
-    transition: all 0.5s ease;
-    margin-top:25px;
-    opacity:0;
-    visibility: hidden;
-}
-@media(min-width: 992px){
-    .header .menu > ul > li.menu-item-has-children:hover .sub-menu{
-        margin-top: 0;
-        visibility: visible;
-        opacity: 1;
-    }
-}
-.header .menu > ul > li .sub-menu > ul > li{
-    line-height: 1;
-}
-.header .menu > ul > li .sub-menu > ul > li > a{
-    display: inline-block;
-    padding: 10px 0;
-    font-size: 15px;
-    color: #555555;
-    transition: color 0.3s ease;
-    text-decoration: none;
-    text-transform: capitalize;
-}
-.header .menu > ul > li .single-column-menu{
-    min-width: 280px;
-    max-width: 350px;
-}
-.header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li{
-    line-height: 1;
-    display: block;
-}
-.header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a {
-    padding:10px 0;
-    display: inline-block;
-    font-size: 15px;
-    color:#555555;
-    transition: color 0.3s ease;
-}
-.header .menu > ul > li .sub-menu.mega-menu{
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.header .menu > ul > li .sub-menu.mega-menu-column-4{
-    max-width: 1100px;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    padding:20px 15px;
-}
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item{
-    flex:0 0 25%;
-    padding:0 15px;
-}
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item .title{
-    font-size: 16px;
-    color:#ea4636;
-    font-weight: 500;
-    line-height: 1;
-    padding:10px 0;
-}
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title{
-    text-align: center;
-}
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img{
-    max-width: 100%;
-    width: 100%;
-    vertical-align: middle;
-    margin-top: 10px;
-}
-.header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a:hover,
-.header .menu > ul > li .sub-menu > ul > li > a:hover,
-.header .item-right a:hover,
-.header .menu > ul > li:hover > a{
-    color:#ea4636;
-}
-
-.mobile-menu-head,
-.mobile-menu-trigger{
     display: none;
+    top: 70px;
+    transition: all 0.5s ease;
+    z-index: 111;
+    background: white;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: -2px 2px 70px -25px rgba(0,0,0,0.3);
+    padding: 20px 10px;
+}
+.menu .wrapper .menu__links div.menu__links__dropdown:hover .menu__links__dropdown__menu{
+    display: flex;
+    transition: all 0.5s ease;
+}
+.menu__links__dropdown__menu__col {
+    width: 100%;
+}
+.menu__links__dropdown__menu a{
+    width: 100%;
+    margin-left: 20px;
+    font-size: 20px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
-/*responsive*/
-@media(max-width: 991px){
-
-    .header .item-center{
-        order:3;
-        flex:0 0 100%;
-    }
-    .header .item-left,
-    .header .item-right{
-        flex:0 0 auto;
-    }
-    .v-center{
-        justify-content: space-between;
-    }
-    .header .mobile-menu-trigger{
-        display: flex;
-        height: 30px;
-        width: 30px;
-        margin-left: 15px;
-        cursor: pointer;
-        align-items: center;
-        justify-content: center;
-    }
-    .header .mobile-menu-trigger span{
-        display: block;
-        height: 2px;
-        background-color: #333333;
-        width: 24px;
-        position: relative;
-    }
-    .header .mobile-menu-trigger span:before,
-    .header .mobile-menu-trigger span:after{
-        content: '';
-        position: absolute;
-        left:0;
-        width: 100%;
-        height: 100%;
-        background-color: #333333;
-    }
-    .header .mobile-menu-trigger span:before{
-        top:-6px;
-    }
-    .header .mobile-menu-trigger span:after{
-        top:6px;
-    }
-    .header .item-right{
-        align-items: center;
-    }
-
-    .header .menu{
-        position: fixed;
-        width: 320px;
-        background-color:#ffffff;
-        left:0;
-        top:0;
-        height: 100%;
-        overflow: hidden;
-        transform: translate(-100%);
-        transition: all 0.5s ease;
-        z-index: 1099;
-    }
-    .header .menu.active{
-        transform: translate(0%);
-    }
-    .header .menu > ul > li{
-        line-height: 1;
-        margin:0;
-        display: block;
-    }
-    .header .menu > ul > li > a{
-        line-height: 50px;
-        height: 50px;
-        padding:0 50px 0 15px;
-        display: block;
-        border-bottom: 1px solid rgba(0,0,0,0.1);
-    }
-    .header .menu > ul > li > a i{
-        position: absolute;
-        height: 50px;
-        width: 50px;
-        top:0;
-        right: 0;
-        text-align: center;
-        line-height: 50px;
-        transform: rotate(-90deg);
-    }
-    .header .menu .mobile-menu-head{
-        display: flex;
-        height: 50px;
-        border-bottom: 1px solid rgba(0,0,0,0.1);
-        justify-content: space-between;
-        align-items: center;
-        position: relative;
-        z-index: 501;
-        position: sticky;
-        background-color: #ffffff;
-        top:0;
-    }
-    .header .menu .mobile-menu-head .go-back{
-        height: 50px;
-        width: 50px;
-        border-right: 1px solid rgba(0,0,0,0.1);
-        cursor: pointer;
-        line-height: 50px;
-        text-align: center;
-        color:#000000;
-        font-size: 16px;
-        display: none;
-    }
-    .header .menu .mobile-menu-head.active .go-back{
-        display: block;
-    }
-    .header .menu .mobile-menu-head .current-menu-title{
-        font-size: 15px;
-        font-weight: 500;
-        color:#000000;
-    }
-    .header .menu .mobile-menu-head .mobile-menu-close{
-        height: 50px;
-        width: 50px;
-        border-left: 1px solid rgba(0,0,0,0.1);
-        cursor: pointer;
-        line-height: 50px;
-        text-align: center;
-        color:#000000;
-        font-size: 25px;
-    }
-    .header .menu .menu-main{
-        height: 100%;
-        overflow-x: hidden;
-        overflow-y: auto;
-    }
-    .header .menu > ul > li .sub-menu.mega-menu,
-    .header .menu > ul > li .sub-menu{
-        visibility: visible;
-        opacity: 1;
-        position: absolute;
-        box-shadow: none;
-        margin:0;
-        padding:15px;
-        top:0;
-        left:0;
-        width: 100%;
-        height: 100%;
-        padding-top: 65px;
-        max-width: none;
-        min-width: auto;
-        display: none;
-        transform: translateX(0%);
-        overflow-y: auto;
-    }
-    .header .menu > ul > li .sub-menu.active{
-        display: block;
-    }
-    @keyframes slideLeft{
-        0%{
-            opacity:0;
-            transform: translateX(100%);
-        }
-        100%{
-            opacity:1;
-            transform: translateX(0%);
-        }
-    }
-    @keyframes slideRight{
-        0%{
-            opacity:1;
-            transform: translateX(0%);
-        }
-        100%{
-            opacity:0;
-            transform: translateX(100%);
-        }
-    }
-    .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img{
-        margin-top:0;
-    }
-    .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title{
-        margin-bottom: 20px;
-    }
-    .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center:last-child .title{
-        margin-bottom:0px;
-    }
-    .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item{
-        flex: 0 0 100%;
-        padding: 0px;
-    }
-    .header .menu > ul > li .sub-menu > ul > li > a,
-    .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a{
-        display: block;
-    }
-    .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul {
-        margin-bottom: 15px;
-    }
-    .menu-overlay{
-        position: fixed;
-        background-color: rgba(0,0,0,0.5);
-        left:0;
-        top:0;
-        width: 100%;
-        height: 100%;
-        z-index: 1098;
-        visibility: hidden;
-        opacity:0;
-        transition: all 0.5s ease;
-    }
-    .menu-overlay.active{
-        visibility: visible;
-        opacity:1;
-    }
-}
-
-
+/*section 2 header-menu*/
+/* section 3 swiper*/
 
 .special {
     width: 100%;
@@ -445,9 +161,12 @@ body {
     border-radius: 20px;
 }
 
+/* section 3 swiper*/
+/* section 4 products */
+
 .products {
     width: 100%;
-    height: 800px;
+    height: 600px;
     margin-top: 40px;
 }
 .products .wrapper .wrapper {
@@ -490,6 +209,86 @@ body {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: 0.3s;
 }
+
+/* section 4 products */
+/* section 5 footer */
+
+.footer {
+
+    height: 160px;
+    background: #0d0d0e;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 40px;
+}
+.footer__row__left {
+    width: 1243px;
+    margin-right: 20px;
+}
+.footer__row__left .menu__logo a {
+    border-color: white;
+}
+.footer_menu {
+    font-weight: 300;
+    letter-spacing: .07em;
+    -webkit-tap-highlight-color: transparent;
+    --vh: 5.8px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-family: Futura,sans-serif;
+    vertical-align: baseline;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: 18px;
+    line-height: 100%;
+    color: #c5c5c5;
+}
+.footer__row {
+    display: flex;
+    justify-content: space-between;
+}
+.footer__row__right, .footer__row__left {
+    display: flex;
+}
+.footer__row__right__box {
+    display: flex;
+    flex-direction: column;
+}
+.footer_right {
+    width: 500px;
+    font-weight: 300;
+    letter-spacing: .07em;
+    -webkit-tap-highlight-color: transparent;
+    --vh: 5.8px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-family: Futura,sans-serif;
+    vertical-align: baseline;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: 18px;
+    line-height: 100%;
+    color: #c5c5c5;
+}
+.footer__row__right__box__imgs img{
+    width: 70px;
+    margin-right: 20px;
+}
+
+/* section 5 footer */
+/* section 6 map */
 
 .mmap {
     width: 100%;
