--- a/style/main.css
+++ b/style/main.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@200&display=swap');
 
+body {
+    transition: all 4s;
+    background: #EEF0F2;
+}
 * {
     margin: 0;
     padding: 0;
@@ -11,6 +15,27 @@
 a, a:hover {
     color: inherit;
     text-decoration: none;
+}
+.btn-primary {
+    background: #353B3C;
+    color: white;
+    border-color: #353B3C;
+}
+.btn-danger {
+    background: #EE964B;
+    color: #Fff;
+    border-color: #F4D35E;
+}
+.btn-danger:hover, .btn-primary:hover {
+    background: #EEF0F2;
+    color: #353B3C;
+}
+.text-center .btn-card {
+    background: #1C2541;
+    color: white;
+}
+.text-price {
+    color: #353B3C;
 }
 input:focus, input {
     outline: none;
@@ -29,7 +54,7 @@ input:focus, input {
     font-size: 30px;
 }
 .nav {
-    background: black;
+    background: #353B3C;
     color: white;
     height: 50px;
 }
@@ -140,4 +165,85 @@ input:focus, input {
 .sticky-sm-top {
     position: sticky;!important;
     top: 200px;
+}
+
+.top-bar__account {
+    display: flex;
+    flex-direction: column;
+    /*width: 100px;*/
+    height: auto;
+    position: absolute;
+    top: 50px;
+    transform: translateY(10%);
+    transition: 500ms;
+    z-index: 99;
+    visibility: hidden;
+    opacity: 0;
+    background: white;
+    padding: 20px;
+}
+.div#sign-in-btn a:hover .top-bar__account {
+    display: flex;
+    transition: all 0.5s ease;
+}
+#sign-in-btn:hover  .top-bar__account {
+    opacity: 1;
+    transform: unset;
+    visibility: visible;
+}
+.basket {
+    width: 100%;
+}
+.ml-50 {
+    margin-left: 50px;
+}
+.card_detail {
+    overflow: hidden;  /* Hide the element content, while height = 0 */
+    height: 0;
+    opacity: 0;
+    transition: height 4000ms 4000ms, opacity 4000ms 4000ms;
+}
+.cd_active {
+    height: auto; opacity: 1;
+    transition: height 0ms 0ms, opacity 600ms 0ms;
+}
+.btn-card {
+    cursor: pointer;
+}
+
+.admin-card {
+    width: 100%;
+    max-width: 300px;!important;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    margin: 5px;
+    padding: 5px;
+}
+.admin-card .row a {
+    font-size: small;
+}
+.btn-admin, #search_input, #search_input::placeholder {
+    background: #26a69a;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    font-size: small;
+}
+.swiper {
+    width: 100%;
+    height: calc(100% + 50px);
+    background: white;
+    padding: 50px;
+}
+
+.swiper-slide {
+    font-size: 18px;
+    background: #fff;
+
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
